@@ -1,6 +1,6 @@
 # Prometheus version & release date.
-VERSION = 0.2-20060205
-RELEASE = 2006-02-05
+VERSION = dev-20060217
+RELEASE = 2006-02-17
 
 # Which profile set to install (see contents of the profiles directory).
 PROFILES = lfs-6.1
